force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/Completed_Badges__c.field-meta.xml
<CustomField>
    <fullName>Completed_Badges__c</fullName>
    <label>Completed Badges</label>
    <summaryFilterItems>
        <field>User_Trailmix_Badge__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Trailmix_Badge__c.User_Trailmix__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>