force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/Percentage_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Completion__c</fullName>
    <description>How many percent has a user completed a trailmix</description>
    <formula>IF( Total_Badges__c == 0, 0, Completed_Badges__c /  Total_Badges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many percent has a user completed a trailmix</inlineHelpText>
    <label>Percentage of Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>