force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/Total_Badges__c.field-meta.xml
<CustomField>
    <fullName>Total_Badges__c</fullName>
    <description>Total number of badges</description>
    <label>Total Badges</label>
    <summaryForeignKey>User_Trailmix_Badge__c.User_Trailmix__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>